@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "[INFO] Pre-processing for make clean\n",
-      "2022-05-13 14:04:07.917878 model.py code start\n"
+      "2022-05-13 19:22:06.532567 model.py code start\n"
      ]
     }
    ],
@@ -24,6 +24,7 @@
     "import matplotlib.pyplot as plt\n",
     "import data.read_samples as rs\n",
     "import torch.optim as optim\n",
+    "import torch.nn as nn\n",
     "import numpy as np\n",
     "import datetime\n",
     "import torch\n",
@@ -31,7 +32,7 @@
     "print(datetime.datetime.now(), \"model.py code start\")\n",
     "\n",
     "BATCH_SIZE = 10\n",
-    "EPOCH = 100\n",
+    "EPOCH = 90\n",
     "LEARNING_RATE = 0.2\n",
     "ANNEALING_RATE = 0.999\n",
     "VISIBLE_UNITS = [180, 200, 250]\n",
@@ -249,51 +250,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rbm_first = RBM(n_vis=VISIBLE_UNITS[0], n_hid=HIDDEN_UNITS[0], k=K_FOLD, batch=BATCH_SIZE).to(device=device)\n",
-    "rbm_second = RBM(n_vis=VISIBLE_UNITS[1], n_hid=HIDDEN_UNITS[1], k=K_FOLD, batch=BATCH_SIZE).to(device=device)\n",
-    "rbm_third = RBM(n_vis=VISIBLE_UNITS[2], n_hid=HIDDEN_UNITS[2], k=K_FOLD, batch=BATCH_SIZE).to(device=device)\n",
+    "rbm_first = RBM(n_vis=VISIBLE_UNITS[0], n_hid=HIDDEN_UNITS[0], k=K_FOLD, batch=BATCH_SIZE)\n",
+    "rbm_second = RBM(n_vis=VISIBLE_UNITS[1], n_hid=HIDDEN_UNITS[1], k=K_FOLD, batch=BATCH_SIZE)\n",
+    "rbm_third = RBM(n_vis=VISIBLE_UNITS[2], n_hid=HIDDEN_UNITS[2], k=K_FOLD, batch=BATCH_SIZE)\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    first_train_op = optim.Adagrad(rbm_first.parameters(), 0.1)\n",
-    "    second_train_op = optim.Adagrad(rbm_second.parameters(), 0.1)\n",
-    "    third_train_op = optim.Adagrad(rbm_third.parameters(), 0.1)\n",
     "\n",
-    "    gb_first_train_op = optim.Adagrad(rbm_first.parameters(), 0.1)\n",
-    "    gb_second_train_op = optim.Adagrad(rbm_second.parameters(), 0.1)\n",
-    "    gb_third_train_op = optim.Adagrad(rbm_third.parameters(), 0.1)\n",
+    "first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
+    "second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
+    "third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
     "\n",
-    "else:\n",
-    "    first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
-    "    second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
-    "    third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
-    "\n",
-    "    gb_first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
-    "    gb_second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
-    "    gb_third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
+    "gb_first_train_op = optim.SGD(rbm_first.parameters(), 0.1)\n",
+    "gb_second_train_op = optim.SGD(rbm_second.parameters(), 0.1)\n",
+    "gb_third_train_op = optim.SGD(rbm_third.parameters(), 0.1)\n",
     "\n",
     "output_from_first = list()\n",
     "output_from_second = list()\n",
-    "output_from_third = list()"
+    "output_from_third = list()\n",
+    "\n",
+    "omse_loss = list()\n",
+    "mse_loss = nn.MSELoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HILAB_~1\\AppData\\Local\\Temp/ipykernel_14660/1971335250.py:10: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at  C:\\cb\\pytorch_1000000000000\\work\\torch\\csrc\\utils\\tensor_new.cpp:210.)\n",
-      "  torch.tensor(data, dtype=torch.float32, device=device)\n",
       "c:\\Users\\HILAB_Labtop_02\\anaconda3\\lib\\site-packages\\torch\\nn\\functional.py:1944: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
       "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n"
      ]
@@ -302,23 +288,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "1\n",
-      "torch.Size([1300000, 10])\n",
-      "torch.Size([10])\n",
-      "torch.Size([10, 1])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "vector + matrix @ vector expected, got 1, 2, 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\HILAB_~1\\AppData\\Local\\Temp/ipykernel_14660/1971335250.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mvog_first\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mloss_first\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfree_energy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvog_first\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mrbm_first\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfree_energy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m         \u001b[0mloss_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss_first\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\HILAB_Labtop_02\\Desktop\\insung\\ecg-dbn\\new_RBM.py\u001b[0m in \u001b[0;36mfree_energy\u001b[1;34m(self, v)\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv_bias\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m         \u001b[0mv_bias_term\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1300000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv_bias\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mview\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbatch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m         \u001b[0mwx_b\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: vector + matrix @ vector expected, got 1, 2, 2"
+      "1ST BBrbm_first Training loss for 0 epoch 0.4999004900455475\tEstimate time : 0:00:00.170913\n",
+      "1ST BBrbm_first Training loss for 1 epoch 0.49994364380836487\tEstimate time : 0:00:00.152286\n",
+      "1ST BBrbm_first Training loss for 2 epoch 0.49959567189216614\tEstimate time : 0:00:00.155017\n",
+      "1ST BBrbm_first Training loss for 3 epoch 0.4996245205402374\tEstimate time : 0:00:00.174986\n",
+      "1ST BBrbm_first Training loss for 4 epoch 0.4999827742576599\tEstimate time : 0:00:00.149566\n",
+      "1ST BBrbm_first Training loss for 5 epoch 0.5000292062759399\tEstimate time : 0:00:00.151936\n",
+      "1ST BBrbm_first Training loss for 6 epoch 0.5001343488693237\tEstimate time : 0:00:00.175956\n",
+      "1ST BBrbm_first Training loss for 7 epoch 0.5001347064971924\tEstimate time : 0:00:00.151634\n",
+      "1ST BBrbm_first Training loss for 8 epoch 0.5001484751701355\tEstimate time : 0:00:00.170031\n",
+      "1ST BBrbm_first Training loss for 9 epoch 0.49976876378059387\tEstimate time : 0:00:00.175189\n",
+      "1ST BBrbm_first Training loss for 10 epoch 0.5000660419464111\tEstimate time : 0:00:00.159481\n",
+      "1ST BBrbm_first Training loss for 11 epoch 0.500177800655365\tEstimate time : 0:00:00.149542\n",
+      "1ST BBrbm_first Training loss for 12 epoch 0.4998032748699188\tEstimate time : 0:00:00.170308\n",
+      "1ST BBrbm_first Training loss for 13 epoch 0.500037431716919\tEstimate time : 0:00:00.147437\n",
+      "1ST BBrbm_first Training loss for 14 epoch 0.49989327788352966\tEstimate time : 0:00:00.167294\n",
+      "1ST BBrbm_first Training loss for 15 epoch 0.4999247193336487\tEstimate time : 0:00:00.161047\n",
+      "1ST BBrbm_first Training loss for 16 epoch 0.4999416470527649\tEstimate time : 0:00:00.147923\n",
+      "1ST BBrbm_first Training loss for 17 epoch 0.500156044960022\tEstimate time : 0:00:00.164830\n",
+      "1ST BBrbm_first Training loss for 18 epoch 0.4999745190143585\tEstimate time : 0:00:00.145095\n",
+      "1ST BBrbm_first Training loss for 19 epoch 0.4999167323112488\tEstimate time : 0:00:00.172922\n",
+      "1ST BBrbm_first Training loss for 20 epoch 0.5001817345619202\tEstimate time : 0:00:00.151121\n",
+      "1ST BBrbm_first Training loss for 21 epoch 0.499894917011261\tEstimate time : 0:00:00.161613\n",
+      "1ST BBrbm_first Training loss for 22 epoch 0.49994799494743347\tEstimate time : 0:00:00.156883\n",
+      "1ST BBrbm_first Training loss for 23 epoch 0.5001980066299438\tEstimate time : 0:00:00.170380\n",
+      "1ST BBrbm_first Training loss for 24 epoch 0.4999156594276428\tEstimate time : 0:00:00.155008\n",
+      "1ST BBrbm_first Training loss for 25 epoch 0.5001733899116516\tEstimate time : 0:00:00.164677\n",
+      "1ST BBrbm_first Training loss for 26 epoch 0.5000911355018616\tEstimate time : 0:00:00.154117\n",
+      "1ST BBrbm_first Training loss for 27 epoch 0.49993816018104553\tEstimate time : 0:00:00.162452\n",
+      "1ST BBrbm_first Training loss for 28 epoch 0.49990567564964294\tEstimate time : 0:00:00.164220\n",
+      "1ST BBrbm_first Training loss for 29 epoch 0.4999922215938568\tEstimate time : 0:00:00.142366\n",
+      "1ST BBrbm_first Training loss for 30 epoch 0.499819815158844\tEstimate time : 0:00:00.147009\n",
+      "1ST BBrbm_first Training loss for 31 epoch 0.4998644292354584\tEstimate time : 0:00:00.149577\n",
+      "1ST BBrbm_first Training loss for 32 epoch 0.5000202655792236\tEstimate time : 0:00:00.170173\n",
+      "1ST BBrbm_first Training loss for 33 epoch 0.5001047849655151\tEstimate time : 0:00:00.159466\n",
+      "1ST BBrbm_first Training loss for 34 epoch 0.500077486038208\tEstimate time : 0:00:00.195847\n",
+      "1ST BBrbm_first Training loss for 35 epoch 0.49999144673347473\tEstimate time : 0:00:00.153137\n",
+      "1ST BBrbm_first Training loss for 36 epoch 0.5001644492149353\tEstimate time : 0:00:00.166881\n",
+      "1ST BBrbm_first Training loss for 37 epoch 0.4998060464859009\tEstimate time : 0:00:00.151975\n",
+      "1ST BBrbm_first Training loss for 38 epoch 0.49975451827049255\tEstimate time : 0:00:00.149791\n",
+      "1ST BBrbm_first Training loss for 39 epoch 0.4999743402004242\tEstimate time : 0:00:00.162590\n",
+      "1ST BBrbm_first Training loss for 40 epoch 0.49995356798171997\tEstimate time : 0:00:00.160464\n",
+      "1ST BBrbm_first Training loss for 41 epoch 0.4998392164707184\tEstimate time : 0:00:00.159242\n",
+      "1ST BBrbm_first Training loss for 42 epoch 0.500217616558075\tEstimate time : 0:00:00.188173\n",
+      "1ST BBrbm_first Training loss for 43 epoch 0.4999549984931946\tEstimate time : 0:00:00.172406\n",
+      "1ST BBrbm_first Training loss for 44 epoch 0.5000824928283691\tEstimate time : 0:00:00.176679\n",
+      "1ST BBrbm_first Training loss for 45 epoch 0.49995431303977966\tEstimate time : 0:00:00.156812\n",
+      "1ST BBrbm_first Training loss for 46 epoch 0.5002993941307068\tEstimate time : 0:00:00.152251\n",
+      "1ST BBrbm_first Training loss for 47 epoch 0.4998801052570343\tEstimate time : 0:00:00.171427\n",
+      "1ST BBrbm_first Training loss for 48 epoch 0.49986836314201355\tEstimate time : 0:00:00.178404\n",
+      "1ST BBrbm_first Training loss for 49 epoch 0.4999604821205139\tEstimate time : 0:00:00.172422\n",
+      "1ST BBrbm_first Training loss for 50 epoch 0.4998153746128082\tEstimate time : 0:00:00.177362\n",
+      "1ST BBrbm_first Training loss for 51 epoch 0.4997187554836273\tEstimate time : 0:00:00.161459\n",
+      "1ST BBrbm_first Training loss for 52 epoch 0.499845951795578\tEstimate time : 0:00:00.165446\n",
+      "1ST BBrbm_first Training loss for 53 epoch 0.5001243948936462\tEstimate time : 0:00:00.151492\n",
+      "1ST BBrbm_first Training loss for 54 epoch 0.49998587369918823\tEstimate time : 0:00:00.152489\n",
+      "1ST BBrbm_first Training loss for 55 epoch 0.4995992183685303\tEstimate time : 0:00:00.167438\n",
+      "1ST BBrbm_first Training loss for 56 epoch 0.4998922049999237\tEstimate time : 0:00:00.160981\n",
+      "1ST BBrbm_first Training loss for 57 epoch 0.49995020031929016\tEstimate time : 0:00:00.162455\n",
+      "1ST BBrbm_first Training loss for 58 epoch 0.500005841255188\tEstimate time : 0:00:00.183384\n",
+      "1ST BBrbm_first Training loss for 59 epoch 0.5000228881835938\tEstimate time : 0:00:00.180895\n",
+      "1ST BBrbm_first Training loss for 60 epoch 0.4999690353870392\tEstimate time : 0:00:00.171426\n",
+      "1ST BBrbm_first Training loss for 61 epoch 0.5000039339065552\tEstimate time : 0:00:00.176410\n",
+      "1ST BBrbm_first Training loss for 62 epoch 0.4999125897884369\tEstimate time : 0:00:00.155476\n",
+      "1ST BBrbm_first Training loss for 63 epoch 0.4999372065067291\tEstimate time : 0:00:00.143517\n",
+      "1ST BBrbm_first Training loss for 64 epoch 0.5000207424163818\tEstimate time : 0:00:00.184748\n",
+      "1ST BBrbm_first Training loss for 65 epoch 0.500206470489502\tEstimate time : 0:00:00.164500\n",
+      "1ST BBrbm_first Training loss for 66 epoch 0.5001610517501831\tEstimate time : 0:00:00.158466\n",
+      "1ST BBrbm_first Training loss for 67 epoch 0.4998992383480072\tEstimate time : 0:00:00.158474\n",
+      "1ST BBrbm_first Training loss for 68 epoch 0.49983087182044983\tEstimate time : 0:00:00.168435\n",
+      "1ST BBrbm_first Training loss for 69 epoch 0.5001505017280579\tEstimate time : 0:00:00.182393\n",
+      "1ST BBrbm_first Training loss for 70 epoch 0.5001593232154846\tEstimate time : 0:00:00.164088\n",
+      "1ST BBrbm_first Training loss for 71 epoch 0.5001897811889648\tEstimate time : 0:00:00.152485\n",
+      "1ST BBrbm_first Training loss for 72 epoch 0.49972230195999146\tEstimate time : 0:00:00.154480\n",
+      "1ST BBrbm_first Training loss for 73 epoch 0.4998900890350342\tEstimate time : 0:00:00.172423\n",
+      "1ST BBrbm_first Training loss for 74 epoch 0.5000070929527283\tEstimate time : 0:00:00.167938\n",
+      "1ST BBrbm_first Training loss for 75 epoch 0.49994298815727234\tEstimate time : 0:00:00.151493\n",
+      "1ST BBrbm_first Training loss for 76 epoch 0.499928742647171\tEstimate time : 0:00:00.150500\n",
+      "1ST BBrbm_first Training loss for 77 epoch 0.5000779628753662\tEstimate time : 0:00:00.164446\n",
+      "1ST BBrbm_first Training loss for 78 epoch 0.5000895261764526\tEstimate time : 0:00:00.166440\n",
+      "1ST BBrbm_first Training loss for 79 epoch 0.500045120716095\tEstimate time : 0:00:00.152989\n",
+      "1ST BBrbm_first Training loss for 80 epoch 0.5000392198562622\tEstimate time : 0:00:00.148515\n",
+      "1ST BBrbm_first Training loss for 81 epoch 0.5000194311141968\tEstimate time : 0:00:00.162452\n",
+      "1ST BBrbm_first Training loss for 82 epoch 0.5002118945121765\tEstimate time : 0:00:00.164971\n",
+      "1ST BBrbm_first Training loss for 83 epoch 0.5001323223114014\tEstimate time : 0:00:00.174417\n",
+      "1ST BBrbm_first Training loss for 84 epoch 0.5001055002212524\tEstimate time : 0:00:00.159467\n",
+      "1ST BBrbm_first Training loss for 85 epoch 0.49996039271354675\tEstimate time : 0:00:00.161459\n",
+      "1ST BBrbm_first Training loss for 86 epoch 0.49997326731681824\tEstimate time : 0:00:00.158469\n",
+      "1ST BBrbm_first Training loss for 87 epoch 0.5000599026679993\tEstimate time : 0:00:00.154480\n",
+      "1ST BBrbm_first Training loss for 88 epoch 0.4996839463710785\tEstimate time : 0:00:00.154517\n",
+      "1ST BBrbm_first Training loss for 89 epoch 0.4998054802417755\tEstimate time : 0:00:00.156474\n"
      ]
     }
    ],
@@ -329,10 +388,8 @@
     "for epoch in range(EPOCH):\n",
     "    '''First bbrbm'''\n",
     "    for i, (data) in enumerate(train_dataloader):\n",
-    "        if i == 4:\n",
-    "            continue\n",
     "        data = Variable(\n",
-    "                torch.tensor(data, dtype=torch.float32, device=device)\n",
+    "                torch.tensor(data, dtype=torch.float32)\n",
     "        ).uniform_(0, 1)\n",
     "        \n",
     "        sample_data = torch.bernoulli(data).view(-1, 10)\n",
@@ -340,34 +397,15 @@
     "        # tensor binary\n",
     "        vog_first, v1, mt = rbm_first(sample_data)\n",
     "        \n",
-    "        loss_first = rbm_first.free_energy(vog_first) - rbm_first.free_energy(v1)\n",
-    "        loss_.append(loss_first.data)\n",
-    "        \n",
+    "        # loss_first = rbm_first.free_energy(vog_first) - rbm_first.free_energy(v1)\n",
+    "        omse_loss = mse_loss(vog_first, v1)\n",
+    "        # loss_.append(loss_first.data)\n",
+    "\n",
     "        first_train_op.zero_grad()\n",
-    "        loss_first.backward()\n",
     "        first_train_op.step()\n",
-    "    \n",
+    "        omse_loss.backward()\n",
     "    output_from_first.append(v1.tolist())\n",
-    "    print(\"1ST BBrbm_first Training loss for {0} epoch {1}\\tEstimate time : {2}\".format(epoch, np.mean(loss_), mt))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(output_from_first))\n",
-    "print(output_from_first)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output_from_first.size())"
+    "    print(\"1ST BBrbm_first Training loss for {0} epoch {1}\\tEstimate time : {2}\".format(epoch, omse_loss, mt))\n"
    ]
   },
   {
@@ -382,8 +420,6 @@
     "for epoch in range(EPOCH):\n",
     "    '''Secnd bbrbm'''\n",
     "    for _, (data) in enumerate(output_from_first): \n",
-    "        if i == 4:\n",
-    "            continue\n",
     "        data = Variable(\n",
     "                torch.tensor(data, dtype=torch.float32)\n",
     "        ).uniform_(0, 1)\n",
@@ -393,14 +429,15 @@
     "        # tensor binary\n",
     "        vog_second, v2, mt = rbm_second(sample_data)\n",
     "        \n",
-    "        loss_second = rbm_second.free_energy(vog_second) - rbm_second.free_energy(v2)\n",
-    "        loss_.append(loss_second.data)\n",
-    "        \n",
+    "        # loss_second = rbm_second.free_energy(vog_second) - rbm_second.free_energy(v2)\n",
+    "        # loss_.append(loss_second.data)\n",
+    "        omse_loss = mse_loss(vog_second, v2)\n",
+    "\n",
     "        second_train_op.zero_grad()\n",
-    "        loss_second.backward()\n",
+    "        omse_loss.backward()\n",
     "        second_train_op.step()\n",
     "\n",
-    "    # output_from_second.append(v2)\n",
+    "    output_from_second.append(v2.tolist())\n",
     "    print(\"2ST BBrbm_first Training loss for {0} epoch {1}\\tEstimate time : \".format(epoch, np.mean(loss_), mt))\n"
    ]
   },
@@ -426,7 +463,7 @@
     "        vog_third, v3, mt = rbm_third(sample_data)\n",
     "        \n",
     "        loss_third = rbm_third.free_energy(vog_third) - rbm_third.free_energy(v3)\n",
-    "        loss_.append(loss_second.data)\n",
+    "        loss_.append(loss_third.data)\n",
     "        \n",
     "        third_train_op.zero_grad()\n",
     "        loss_third.backward()\n",
